Improve face swap performance
Performance enhancements