@@ -53,6 +53,9 @@ tasks.register('run', JavaExec) {
 	mainClass = pluginMainClass
 
 	jvmArgs "-ea"
+	if (org.gradle.internal.os.OperatingSystem.current().isMacOsX()) {
+		jvmArgs "--add-exports=java.desktop/com.apple.eawt=ALL-UNNAMED"
+	}
 	args "--developer-mode", "--debug"
 }
 
